[gd_scene load_steps=9 format=3 uid="uid://bp2gvppdhe1hm"]

[ext_resource type="Script" path="res://scenes/TyreCloseUp.gd" id="1_otm8j"]
[ext_resource type="Texture2D" uid="uid://di8eodihm0rdq" path="res://assets/view/view_tire_worn.png" id="2_r1xoj"]
[ext_resource type="Texture2D" uid="uid://buatevsd0efm2" path="res://assets/view/view_tire_normal.png" id="3_rdpfl"]
[ext_resource type="Texture2D" uid="uid://cxy4sr7wimb3c" path="res://assets/view/bolt.png" id="4_a7id1"]
[ext_resource type="Texture2D" uid="uid://l5rhokm2c20j" path="res://assets/view/bolt_screw.png" id="5_swa2r"]
[ext_resource type="Texture2D" uid="uid://v3kv10y1px53" path="res://assets/view/bolt_hint.png" id="6_y8umg"]
[ext_resource type="Texture2D" uid="uid://l5exbfk4ped6" path="res://assets/ui/ui_progressbar_back.png" id="7_kagx3"]
[ext_resource type="Texture2D" uid="uid://2qy4yuc7ftqv" path="res://assets/ui/ui_progressbar_front.png" id="8_wl1u5"]

[node name="UnscrewFlatTyre" type="Node2D" groups=["tyre_close_up"]]
script = ExtResource("1_otm8j")

[node name="ViewTireWorn" type="Sprite2D" parent="."]
position = Vector2(960, 542)
texture = ExtResource("2_r1xoj")

[node name="ViewTireNormal" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("3_rdpfl")

[node name="Bolt" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("4_a7id1")

[node name="BoltScrew" type="Sprite2D" parent="."]
position = Vector2(1496, 683)
texture = ExtResource("5_swa2r")

[node name="ScrewPosition" type="Node2D" parent="BoltScrew"]
position = Vector2(-248, -240)

[node name="BoltHint" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("6_y8umg")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_left = 897.0
offset_top = 423.0
offset_right = 1061.0
offset_bottom = 464.0
texture_under = ExtResource("7_kagx3")
texture_progress = ExtResource("8_wl1u5")
texture_progress_offset = Vector2(10, 10)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
